<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SmartAir</string>
    <string name="action_settings">Settings</string>
    <string name="airports_progress_message">Fetching Airports</string>
    <string name="flights_progress_message">Fetching Scheduled Flights</string>
    <string name="no_airports_available">No Airports available</string>
    <string name="no_flight_available">No Flights Available</string>
    <string name="loading">Loading&#8230;</string>
    <string name="smartair">SmartAir</string>
    <string name="airports_title">Airports</string>
    <string name="schedule_title">Flight Schedules</string>
    <string name="search_origin_airport">Search Origin Airport</string>
    <string name="search_destination_airport">Search Destination Airport</string>
    <string name="get_flight_schedules">Get Flight Schedules</string>
    <string name="departure_date">Departure Date</string>
    <string name="copyright">\u00A9SmartAir <xliff:g id="current_year">%1$d</xliff:g></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_air_slogan">Exemplary, Convenience and Classy</string>
    <string name="smartair_international">SmartAir International</string>
    <string name="start_now">Start now</string>
    <string name="select_origin_airport">Please Select Origin Airport</string>
    <string name="select_destination_airport">Please Select Destination Airport</string>
    <string name="select_departure_date">Please Set Departure Date</string>
    <string name="effective_from">Effective: </string>
    <string name="expiry_date">Expiration: </string>
    <string name="flight_number">Flight Number</string>
    <string name="departure">Departure: </string>
    <string name="not_found">Can\'t find flight Schedules</string>
</resources>
